re PR middle-end/15486 (-fdata-sections moves common vars to .bss)

PR middle-end/15486
	* varasm.c (asm_emit_uninitialised): Return early if
	a custom section is requested.
	(assemble_variable): Revert 2002-03-15 patch.

From-SVN: r92365